# ahi-operation-center

./: .env.example  .firebaserc  .flake8  .gitignore  04_prj_swarm_legacy_swarm_scarlet-opportunity_data_hpc_samples_dump.csv  04_prj_swarm_legacy_swarm_scarlet-opportunity_data_pure_identity_results.csv  CONTRIBUTING.md  DEPENDENCIES.md  README.md  README_LAUNCH.md  SECURITY.md  SECURITY_SCAN_REPORT.md  TECHNICAL_DEBT.md  alpha_autonomus_simulation.py  autonomous_simulation_results.csv  batch_results.csv  batch_simulation.py  claude_nexus_journal.txt  complete_entity_research_v5.tex  crisis_analisis.py  firebase.json  generate_figures.py  pure_identity_test.py  pyproject.toml  requirements.txt
.firebase/: hosting.c2l0aW9zLXdlYlxhaGlnb3Zlcm5hbmNlLmNvbQ.cache  hosting.c2l0aW9zLXdlYlxldGhpYy1jaGVjaw.cache  hosting.c2l0aW9zLXdlYlxzb3ZlcmVpZ25zeW1iaW9zaXMuY29t.cache
.github/: SECURITY.md
.github/workflows/: deploy.yml  python-ci.yml  release.yml
.jules/: JULES_INSTRUCTIONS.md  bolt.md  palette.md  sentinel.md
ahi-gov/: README.md  cloudbuild.yaml
ahi-gov/src/main/apigee/apiproxies/: README.md
ahi-gov/src/main/apigee/apiproxies/sap-governance-v1/apiproxy/: apiproxy.xml
ahi-gov/src/main/apigee/apiproxies/sap-governance-v1/apiproxy/proxies/: default.xml
ahi-gov/src/main/apigee/apiproxies/sap-governance-v1/apiproxy/targets/: default.xml
ahi-governance-docs/: README.md
ahi-governance-docs/ahi-governance-docs/: CONTRIBUTING.md
ahi-governance-docs/ahi-governance-docs/eu_ai_act_templates/: article_15_template.md
ahi-governance-docs/ahi-governance-docs/nature_physics_findings/: README.md
ahi-governance-framework/: FRAMEWORK_SPEC.md
ahi-operation-center-v2/: README.md  pyproject.toml
ahi-operation-center-v2/apps/api-gateway/: README.md
ahi-operation-center-v2/apps/api-gateway/src/: main.py
ahi-operation-center-v2/apps/web-governance/: api-docs.html  eu-ai-act.html  index.html  privacy.html  sitemap.xml  terms.html
ahi-operation-center-v2/docs/: README.md
ahi-operation-center-v2/docs/governance/: README.md
ahi-operation-center-v2/infrastructure/: README.md
ahi-operation-center-v2/infrastructure/docker/: Dockerfile  docker-compose.yml
ahi-operation-center-v2/research/: README.md
ahi-operation-center-v2/research/simulations/: alpha_autonomous_simulation.py  batch_simulation.py  pure_identity_test.py
ahi-operation-center-v2/tests/: benchmark_simulation.py
alpha-core/: package-lock.json  package.json
alpha-core/src/: index.ts
docs/: API_REFERENCE.md  STATE_MACHINE.md
documentos-de-gobernanza/: README.md
examples/: 01_basic_sap_audit.py  02_meba_calculation.py  03_stress_test_demo.py  README.md
figures/: README.md
functions/: package-lock.json  package.json
functions/src/: index.ts
meba-core/: README.md  benchmark_meba.py  pyproject.toml
meba-core/src/: meba_metric.py
meba-core/src/meba_core/: __init__.py  meba_metric.py
meba-core/tests/: conftest.py  test_caching.py  test_meba_metric.py
research/analysis/: crisis_analysis.py  generate_figures.py
research/experiments/: app.py  eliza.py  syntergic_resonance_live.py
research/notebooks/: complete_entity_lab.ipynb
research/simulations/: alpha_autonomous_simulation.py  batch_simulation.py  pure_identity_hpc.py  pure_identity_test.py  sensitivity_analysis.py
sap-pilot-kit/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  boiling_frog_tester.py  certificate_template.md  ice_w_logger.py  pyproject.toml
sap-pilot-kit/.github/workflows/: framework-bootstrap.yml
sap-pilot-kit/src/sap_pilot_kit/: boiling_frog_tester.py  ice_w_logger.py
sap-pilot-kit/tests/: conftest.py  test_boiling_frog.py  test_ice_w_logger.py  test_performance_integrity.py
sitios-web/: ahigovernance_enhanced.html  sovereignsymbiosis_enhanced.html
sitios-web/ahigovernance.com/: api-docs.html  eu-ai-act.html  index.html  privacy.html  sitemap.xml  terms.html
sitios-web/ethic-check/: index.html
sitios-web/sovereignsybiosis.com/: index.html  limites-eticos.html  peonr.html  terms.html  vie-calculator.html
sitios-web/sovereignsymbiosis.com/: carta-magna.html  eliza.html  glosario.html  index.html  limites-eticos.html  metodologia.html  peonr.html  privacy.html  sitemap.xml  soberania-evento.html  terms.html  vie-calculator.html
training/: contexto.txt  modulo_1_paradoja_memoria.md  test_bridge.py  test_mirror.py  test_unification.py
training/core/: analyzer.py  bridge.py  interfaces.py  mirror.py  patcher.py
training/core/extensions/: python_ext.py
verification/: verify_sites.py
