[project]
name = "sap-pilot-kit"
version = "0.1.0"
description = "Sovereign Autarchy Protocol (SAP) Pilot Kit"
authors = [
    {name = "AHI Governance Labs", email = "enterprise@ahigovernance.com"}
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
